Completed Day 2 Assignments

--- a/404.html
+++ b/404.html
@@ -56,7 +56,16 @@
       <svg viewBox="1 0 38 18" class="error-number">
         <text x="0" y="17">404</text>
       </svg>
-      <h2 class="error-message">Page Not Found</h2>
+      <h2 class="error-message">Ooops...</h2>
+      <h3 class="error-message">Page Not Found</h3>
+      <div>
+        <picture>
+          <source type="image/webp" srcset="./media_1ee398cd79c485887591cda7a2e62e838207d120c.png?width=2000&amp;format=webply&amp;optimize=medium" media="(min-width: 600px)">
+          <source type="image/webp" srcset="./media_1ee398cd79c485887591cda7a2e62e838207d120c.png?width=750&amp;format=webply&amp;optimize=medium">
+          <source type="image/png" srcset="./media_1ee398cd79c485887591cda7a2e62e838207d120c.png?width=2000&amp;format=png&amp;optimize=medium" media="(min-width: 600px)">
+          <img loading="lazy" alt="" src="./media_1ee398cd79c485887591cda7a2e62e838207d120c.png?width=750&amp;format=png&amp;optimize=medium" width="857" height="360" class="banner">
+        </picture>
+      </div>
       <p class="button-container">
         <a href="/" class="button secondary error-button-home">Go home</a>
       </p>
