--- a/tools/sidekick/library.html
+++ b/tools/sidekick/library.html
@@ -34,6 +34,15 @@
       const library = document.createElement('sidekick-library')
       library.config = {
         base: '/tools/sidekick/library.json',
+         
+        // extends: 'https://sidekick-library--aem-block-collection--adobe.aem.live/tools/sidekick/library.json'
+        tags: '/tools/sidekick/plugins/tags/tags.js',
+        plugins: {
+          tags: {
+            src: '/tools/sidekick/plugins/tags/tags.js',
+            foo: 'bar'
+          }
+        }
       }
       document.body.prepend(library)
     </script>
